log
Thu 09 May 2024 01:08:11 AM UTC: 
 tests:  1|8
total_score: 0/70
2350aef
Thu 09 May 2024 01:12:22 AM UTC: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  8|7
total_score: 10/70
b7afe49
Thu 09 May 2024 01:13:10 AM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
6c06279
Thu 09 May 2024 01:15:13 AM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 20/70
94a9d83
Thu 09 May 2024 01:24:29 AM UTC: 
 treemap.c | 41 ++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 40 insertions(+), 1 deletion(-)
 tests:  12|5
total_score: 20/70
bab2b5d
Thu 09 May 2024 01:26:22 AM UTC: 
 treemap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  12|5
total_score: 20/70
0992d3b
Thu 09 May 2024 01:28:13 AM UTC: 
 treemap.c | 42 +++++++++++++++---------------------------
 1 file changed, 15 insertions(+), 27 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:63:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   63 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
a09cd63
